Fix application not loading on firefox

--- a/src/pages/Auth/Login/Login.scss
+++ b/src/pages/Auth/Login/Login.scss
@@ -12,7 +12,7 @@
   .loginContent{
     width: 50%;
     background-color: #ffffff;
-    padding: 5rem 15rem;
+    padding: 10rem 15rem;
     color: #637A87;
 
     .loginText{
